--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Build and Push Docker Images
         run: |
-          docker build -t $ACR_NAME.azurecr.io/$LOCUST_MASTER:latest -f lucust/dockerfile locust
-          docker build -t $ACR_NAME.azurecr.io/$LOCUST_WORKER:latest -f boomer/dockerfile boomer
+          docker build -t $ACR_NAME.azurecr.io/$LOCUST_MASTER:latest -f lucust/dockerfile .
+          docker build -t $ACR_NAME.azurecr.io/$LOCUST_WORKER:latest -f boomer/dockerfile .
           docker push $ACR_NAME.azurecr.io/$LOCUST_MASTER:latest
           docker push $ACR_NAME.azurecr.io/$LOCUST_WORKER:latest
 
