--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -31,8 +31,8 @@ jobs:
       - name: Build and Push Docker Images
         run: |
           ls -la
-          docker build -t $ACR_NAME.azurecr.io/$LOCUST_MASTER:latest -f lucust/dockerfile .
-          docker build -t $ACR_NAME.azurecr.io/$LOCUST_WORKER:latest -f boomer/dockerfile .
+          docker build -t $ACR_NAME.azurecr.io/$LOCUST_MASTER:latest -f locust/dockerfile ./locust
+          docker build -t $ACR_NAME.azurecr.io/$LOCUST_WORKER:latest -f boomer/dockerfile ./boomer
           docker push $ACR_NAME.azurecr.io/$LOCUST_MASTER:latest
           docker push $ACR_NAME.azurecr.io/$LOCUST_WORKER:latest
 
