--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -42,31 +42,43 @@ jobs:
           docker-compose build
           docker-compose push
 
-      - name: Deploy Locust Master
+      - name: Deploy to Azure
         run: |
-          az container create --resource-group $RESOURCE_GROUP --name $ACI_GROUP \
-            --image $ACR_NAME.azurecr.io/locust-masterr:latest \
-            --cpu 2 --memory 4 \
-            --registry-login-server $ACR_NAME.azurecr.io \
-            --registry-username ${{ secrets.ACR_USERNAME }} \
-            --registry-password ${{ secrets.ACR_PASSWORD }} \
-            --os-type Linux \
-            --dns-name-label locust-master-${{ github.run_id }} \
-            --ports 8089 \
-            --secure-environment-variables EXPECT_WORKERS=1 \
-            --command-line "locust -f ./locustfile.py --master --headless --expect-workers 1 --users 1 --run-time 360s --spawn-rate .1"
 
-      - name: Deploy Locust Worker
-        run: |
-          az container create --resource-group $RESOURCE_GROUP --name $ACI_NAME \
-            --image $ACR_NAME.azurecr.io/$IMAGE_NAME:latest \
-            --cpu 1 --memory 1 \
-            --registry-login-server $ACR_NAME.azurecr.io \
+          # Deploy using the Compose file (now referencing ACR images)
+          az container create \
+            --resource-group ${{ env.RESOURCE_GROUP }} \
+            --name ${{ env.APP_NAME }} \
+            --file docker-compose.yml \
+            --registry-login-server ${{ env.ACR_NAME }}.azurecr.io \
             --registry-username ${{ secrets.ACR_USERNAME }} \
-            --registry-password ${{ secrets.ACR_PASSWORD }} \
-            --os-type Linux \
-            --ports 80
-            # --secure-environment-variables LOCUST_MASTER_HOST=http://locust-master-${{ github.run_id }}:8089
+            --registry-password ${{ secrets.ACR_PASSWORD }}
+
+      # - name: Deploy Locust Master
+      #   run: |
+      #     az container create --resource-group $RESOURCE_GROUP --name $ACI_GROUP \
+      #       --image $ACR_NAME.azurecr.io/locust-masterr:latest \
+      #       --cpu 2 --memory 4 \
+      #       --registry-login-server $ACR_NAME.azurecr.io \
+      #       --registry-username ${{ secrets.ACR_USERNAME }} \
+      #       --registry-password ${{ secrets.ACR_PASSWORD }} \
+      #       --os-type Linux \
+      #       --dns-name-label locust-master-${{ github.run_id }} \
+      #       --ports 8089 \
+      #       --secure-environment-variables EXPECT_WORKERS=1 \
+      #       --command-line "locust -f ./locustfile.py --master --headless --expect-workers 1 --users 1 --run-time 360s --spawn-rate .1"
+
+      # - name: Deploy Locust Worker
+      #   run: |
+      #     az container create --resource-group $RESOURCE_GROUP --name $ACI_NAME \
+      #       --image $ACR_NAME.azurecr.io/$IMAGE_NAME:latest \
+      #       --cpu 1 --memory 1 \
+      #       --registry-login-server $ACR_NAME.azurecr.io \
+      #       --registry-username ${{ secrets.ACR_USERNAME }} \
+      #       --registry-password ${{ secrets.ACR_PASSWORD }} \
+      #       --os-type Linux \
+      #       --ports 80
+      #       # --secure-environment-variables LOCUST_MASTER_HOST=http://locust-master-${{ github.run_id }}:8089
 
       - name: Stream Logs from Locust Master
         run: |
